2020-07-03  Michal Hoftich  <michal.h21@gmail.com>

	* index.html,
	* tex4ht.css: moved CSS information to a standalone file.
	* index.html: added semantic elements for the command listings.
	* index.html: added main menu.

2020-05-29  Michal Hoftich  <michal.h21@gmail.com>

	* index.html: added back info about htlatex.
	* index.html: fixed monospaced font size.

2020-05-28  Michal Hoftich  <michal.h21@gmail.com>

	* index.html: use make4ht instead of htlatex.
	* index.html: added link to the Tugboat article.

2019-06-24  Karl Berry  <karl@freefriends.org>

	* index.html: wording, tweak changelog format

2019-01-22  Michal Hoftich  <michal.h21@gmail.com>

	* index.html: moved changelog  to the bottom of the page.
	* index.html: use line leading only on small screens.
	* index.html: changes heading levele structure.
	* changelog.html: full changelog template.
	* changelog-parse.lua: made number of parser entries configurable.
	* changelog-parse.lua: use non-breaking space for separating TeX
		file and generated .4ht files.
	* Makefile: generate changelog-include.html.

2019-01-21  Michal Hoftich  <michal.h21@gmail.com>

	* index.html: added links to tex.sx, make4ht and tex4ebook. Added more
	headers.
	* index.html: added changelog.
	* index.html: fixes for Google issues: set the <meta viewport>
	property, added canonical URL, added HTML5 doctype, increased line
        leading.
	* Makefile: generate the changelog.html.
	* changelog-parse.lua: script for ChangeLog conversion to HTML.
	* google5fe6afe7d7955962.html: added file for Google
	verification. I hope to be able to investigate the missing web
	from Google search.

This file is public domain.  Started 2019, Michal Hoftich.