@@ -22,6 +22,29 @@
 TeX/LaTeX/ConTeXt/etc. to HTML, various XML flavors, braille, etc.,
 optionally using MathML.
 
+<h3 id="features">Features</h3>
+
+<ul>
+  <li>it supports most LaTeX packages and custom commands, including:
+    <ul>
+      <li>BibLaTeX</li>
+      <li><a href="https://tex.stackexchange.com/a/488741/2891">TikZ</a></li>
+      <li>Fontspec</li>
+    </ul>
+  </li>
+  <li>it supports various input format, apart from LaTeX:
+    <ul>
+      <li><a href="https://www.kodymirus.cz/pythontex-tex4ht/pythontex-gallery.html">PythonTeX</a></li>
+      <li><a href="https://tex.stackexchange.com/a/506439/2891">RMarkdown</a> and other formats supported by Knitr and Pandoc</li>
+
+    </ul>
+  </li>
+  <li>extensive support for modification of the output</li>
+  <li>output formats include HTML 5, ODT and Docbook</li>
+  <li>math can be exported to MathML, MathJax or pictures</li>
+  <li><a href="https://www.kodymirus.cz/overleaf-html-sample/main.html">publishing webpages from Overleaf</a></li>
+</ul>
+
 <h3 id="devel">Project repository and discussions</h3>
 <ul>
 <li><a href="#changelog">ChangeLog</a>.</li>
