@@ -4,6 +4,7 @@
 	* tex4ht.css: moved CSS information to a standalone file.
 	* index.html: added semantic elements for the command listings.
 	* index.html: added main menu.
+	* index.html: started listing of features.
 
 2020-05-29  Michal Hoftich  <michal.h21@gmail.com>
 
